--- a/css/body.css
+++ b/css/body.css
@@ -1,8 +1,8 @@
 .body {
-    background: rgb(255, 255, 255);
+    background: white;
     color: rgb(2, 2, 2);
 }
 
-.body__blueBackground {
-    background: rgb(231, 234, 252);
+.body__greyBackground {
+    background: rgb(236 236 245);
 }
