--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
     padding: 15px;
     text-align: center;
-    border-top: 3px solid linen;
+    border-top: 3px solid yellow;
     font-size: 12px;
     font-weight: 500;
 
