changed background color

--- a/css/body.css
+++ b/css/body.css
@@ -3,6 +3,6 @@
     color: rgb(2, 2, 2);
 }
 
-.body__greyBackground {
-    background: rgb(236 236 245);
+.body__yellowBackground {
+    background: rgb(255 243 44);
 }
