--- a/css/table.css
+++ b/css/table.css
@@ -10,7 +10,7 @@
 
 .table__cell {
     margin: 0 auto;
-    border: 2px inset rgb(114, 106, 106);
+    border: 2px inset black;
     padding: 15px;
     text-align: center;
 }
