--- a/css/table.css
+++ b/css/table.css
@@ -19,13 +19,16 @@
 .table__header {
     background: rgb(236 236 245);
 }
+.table__row:nth-child(even) {
+    background: white;
+}
 
 .table__row:nth-child(odd) {
     background: rgb(236 236 245);
 }
 
 .table__row:hover {
-    background: yellow;
+    background: rgb(255, 255, 46);
 }
 
 .table__container {
