container margin changed

--- a/css/container.css
+++ b/css/container.css
@@ -4,7 +4,7 @@
     line-height: 1.8;
     padding: 10px 25px;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: 20px auto;
     border: solid black;
     background-color: white;
 }
